Fix some styles for high contrast themes

--- a/extensions/vuengine-studio-extension/src/core/browser/style/toolbar.css
+++ b/extensions/vuengine-studio-extension/src/core/browser/style/toolbar.css
@@ -2,6 +2,7 @@
   --theia-toolbar-height: var(--theia-statusBar-height);
   --theia-toolbar-item-padding: 4px;
   --theia-toolbar-icon-size: 16px;
+  border-bottom: var(--theia-border-width) solid var(--theia-statusBar-border);
   padding: 0 var(--theia-ui-padding);
   z-index: 1;
 }
